# recording-ai

./: .gitignore  BLACKHOLE_SETUP.md  FASTER_WHISPER_SETUP.md  PYTHON_WHISPER_SETUP.md  README.md  check_blackhole.js  package-lock.json  package.json  pyproject.toml  test_cli.js  test_recording.js  test_simple.cjs  tsconfig.json
public/: realtime.html
src/: index.ts
src/api/: server.ts
src/python/: faster_whisper_transcribe.py  whisper_daemon.py
src/services/: AudioRecorder.ts  FasterWhisperService.ts  RealtimeRecordingService.ts  RecordingManager.ts  SystemAudioRecorder.ts  VADService.ts  WhisperPythonService.ts  WhisperService.ts
src/types/: index.ts
